# MVGFormer

./: .gitignore  pyproject.toml
configs/panoptic/: yolo_wholebody_knn5-lr4-q1024.yaml
docs/: yolo_integration.md
lib/core/: config.py
lib/utils/: wholebody_mapping.py
scripts/: setup_yolo_integration.sh  test_yolo_integration.py
